--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel='stylesheet' href='/stylesheets/OpenSans.css' />
+    <style>
+      body{
+        background: #000;
+        color: #fff;
+        font-family: "Open Sans Light";
+      }
+      .wrapper{
+        margin: 0 auto;
+        width: 800px;
+      }
+      textarea{
+        max-width: 100%;
+      }
+    </style>
   </head>
   <body>
     <div class="wrapper">
       <header>
         <h1>STUDIO MOFO</h1>
         <h2>HELP A MOFO OUT</h2>
+        <form id="request-form" action="/requestForm" method="post">
+          <input type="text" maxlength="140" size="100" name="message"></input>
+          <textarea form="request-form" name="summary" cols="100" rows="2"></textarea>
+          <input type="submit" value="Send Request"></input>
+        </form>
       </header>
       <main>
       </main>
