--- a/views/index.html
+++ b/views/index.html
@@ -3,13 +3,14 @@
   <head>
     <title>Studio MoFo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="//mozorg.cdn.mozilla.net/media/css/tabzilla-min.css" rel="stylesheet" />
     <link rel='stylesheet' href='/stylesheets/fonts.css' />
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
     <div class="container">
-
+      <a href="https://www.mozilla.org/" id="tabzilla">mozilla</a>
       <div class="row">
         <header id="logo-banner" class="text-center col-md-4 col-md-offset-4">
           <div class="circle"></div>
@@ -62,12 +63,11 @@
           </div>
         </div>
       </main>
-
+      <footer>
+        <script src="//mozorg.cdn.mozilla.net/tabzilla/tabzilla.js"></script>
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="/bootstrap/js/bootstrap.min.js"></script>
+      </footer>
     </div>
-
-
-
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
