Add avatar pics

--- a/views/index.html
+++ b/views/index.html
@@ -46,17 +46,17 @@
           </div>
           <div class="row">
             <div class="col-md-4 text-center">
-              <div class="avatar"></div>
+              <div class="avatar"><img src="/images/erika.jpg"></div>
               <p class="name">Erika Drushka</p>
               <p class="title">Copywriter</p>
             </div>
             <div class="col-md-4 text-center">
-              <div class="avatar"></div>
+              <div class="avatar"><img src="/images/sabrina.jpg"></div>
               <p class="name">Sabrina Ng</p>
               <p class="title">Designer</p>
             </div>
             <div class="col-md-4 text-center">
-              <div class="avatar"></div>
+              <div class="avatar"><img src="/images/mavis.jpg"></div>
               <p class="name">Mavis Ou</p>
               <p class="title">Developer</p>
             </div>
