--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,7 +52,7 @@ form input[type='submit']{
   text-transform: uppercase;
 }
 
-#who-are-we .avatar{
+#who-are-we .avatar img{
   width: 120px;
   height: 120px;
   border-radius: 50%;
