--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
           <div class="circle"></div>
           <div id="logo-text">
             <h1>Help a <br/> Mofo Out</h1>
-            DRAFT &#8226; DESIGN &#8226; DEVELOP
+            <p>DRAFT &#8226; DESIGN &#8226; DEVELOP</p>
           </div>
         </header>
       </div>
