--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,3 +70,9 @@ body{
   font-style: italic;
   margin-top: -10px;
 }
+
+#thank-you-message,
+#error-message{
+  font-size: 20px;
+  margin-top: 50px;
+}
