valentines day ed

--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
+    <div id="ribbon"><span>Valentine's Day Edition</span></div>
     <div class="container">
       <a href="https://www.mozilla.org/" id="tabzilla">mozilla</a>
       <div class="row">
