--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,22 @@
 body{
-  background: #C7C7C7;
-  color: #222;
+  /*background: #C7C7C7;*/
+  /*color: #222;*/
   font-family: "Open Sans Light";
+  color: #fff;
+  background:
+    radial-gradient(circle closest-side at 60% 43%, #b03 26%, rgba(187,0,51,0) 27%),
+    radial-gradient(circle closest-side at 40% 43%, #b03 26%, rgba(187,0,51,0) 27%),
+    radial-gradient(circle closest-side at 40% 22%, #d35 45%, rgba(221,51,85,0) 46%),
+    radial-gradient(circle closest-side at 60% 22%, #d35 45%, rgba(221,51,85,0) 46%),
+    radial-gradient(circle closest-side at 50% 35%, #d35 30%, rgba(221,51,85,0) 31%),
+
+    radial-gradient(circle closest-side at 60% 43%, #b03 26%, rgba(187,0,51,0) 27%) 50px 50px,
+    radial-gradient(circle closest-side at 40% 43%, #b03 26%, rgba(187,0,51,0) 27%) 50px 50px,
+    radial-gradient(circle closest-side at 40% 22%, #d35 45%, rgba(221,51,85,0) 46%) 50px 50px,
+    radial-gradient(circle closest-side at 60% 22%, #d35 45%, rgba(221,51,85,0) 46%) 50px 50px,
+    radial-gradient(circle closest-side at 50% 35%, #d35 30%, rgba(221,51,85,0) 31%) 50px 50px;
+  background-color:#b03;
+  background-size:100px 100px;
 }
 
 .row{
@@ -13,7 +28,8 @@ body{
 }
 
 #logo-banner .circle{
-  background: #555;
+  /*background: #555;*/
+  background: #F7D7E4;
   border-radius: 50%;
   width: 200px;
   height: 200px;
@@ -76,3 +92,25 @@ body{
   font-size: 20px;
   margin-top: 50px;
 }
+
+#ribbon{
+  overflow: hidden;
+  position: absolute;
+  left: -3em;
+  top: 2.5em;
+  -moz-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+#ribbon span{
+  border: 1px solid #faa;
+  color: #fff;
+  background: #000;
+  display: block;
+  font: bold 81.25% 'Helvetiva Neue', Helvetica, Arial, sans-serif;
+  margin: 0.05em 0;
+  padding: 0.7em 3.5em;
+  text-align: center;
+  text-decoration: none
+}
+
