--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,18 +3,19 @@ body{
   /*color: #222;*/
   font-family: "Open Sans Light";
   color: #fff;
+  /* background pattern credits: http://lea.verou.me/css3patterns */
   background:
     radial-gradient(circle closest-side at 60% 43%, #b03 26%, rgba(187,0,51,0) 27%),
     radial-gradient(circle closest-side at 40% 43%, #b03 26%, rgba(187,0,51,0) 27%),
-    radial-gradient(circle closest-side at 40% 22%, #d35 45%, rgba(221,51,85,0) 46%),
-    radial-gradient(circle closest-side at 60% 22%, #d35 45%, rgba(221,51,85,0) 46%),
-    radial-gradient(circle closest-side at 50% 35%, #d35 30%, rgba(221,51,85,0) 31%),
+    radial-gradient(circle closest-side at 40% 22%, #CC274D 45%, rgba(221,51,85,0) 46%),
+    radial-gradient(circle closest-side at 60% 22%, #CC274D 45%, rgba(221,51,85,0) 46%),
+    radial-gradient(circle closest-side at 50% 35%, #CC274D 30%, rgba(221,51,85,0) 31%),
 
     radial-gradient(circle closest-side at 60% 43%, #b03 26%, rgba(187,0,51,0) 27%) 50px 50px,
     radial-gradient(circle closest-side at 40% 43%, #b03 26%, rgba(187,0,51,0) 27%) 50px 50px,
-    radial-gradient(circle closest-side at 40% 22%, #d35 45%, rgba(221,51,85,0) 46%) 50px 50px,
-    radial-gradient(circle closest-side at 60% 22%, #d35 45%, rgba(221,51,85,0) 46%) 50px 50px,
-    radial-gradient(circle closest-side at 50% 35%, #d35 30%, rgba(221,51,85,0) 31%) 50px 50px;
+    radial-gradient(circle closest-side at 40% 22%, #CC274D 45%, rgba(221,51,85,0) 46%) 50px 50px,
+    radial-gradient(circle closest-side at 60% 22%, #CC274D 45%, rgba(221,51,85,0) 46%) 50px 50px,
+    radial-gradient(circle closest-side at 50% 35%, #CC274D 30%, rgba(221,51,85,0) 31%) 50px 50px;
   background-color:#b03;
   background-size:100px 100px;
 }
@@ -29,7 +30,7 @@ body{
 
 #logo-banner .circle{
   /*background: #555;*/
-  background: #F7D7E4;
+  background: #FA698B;
   border-radius: 50%;
   width: 200px;
   height: 200px;
@@ -103,14 +104,13 @@ body{
 }
 
 #ribbon span{
-  border: 1px solid #faa;
-  color: #fff;
-  background: #000;
+  color: #000;
+  background: #F7D5D8;
   display: block;
   font: bold 81.25% 'Helvetiva Neue', Helvetica, Arial, sans-serif;
   margin: 0.05em 0;
-  padding: 0.7em 3.5em;
+  padding: 0.8em 3.3em;
   text-align: center;
-  text-decoration: none
+  text-decoration: none;
 }
 
