--- a/views/index.html
+++ b/views/index.html
@@ -38,7 +38,7 @@
               <input id="requester-team" class="form-control" type="text" maxlength="50" size="100" name="team" placeholder="What team are you on?" required></input>
               <label for="requester-summary" class="hidden">Summary</label>
               <textarea id="request-summary" class="form-control" name="summary" cols="100" rows="5" maxlength="140" placeholder="Briefly describe how we can help you (140 characters or less)" required></textarea>
-              <input type="submit" value="SUBMIT" class="btn btn-default"></input>
+              <input type="submit" value="SEND YOUR LOVE" class="btn btn-default"></input>
             </form>
             <p>Questions? Email us anytime at <a href="mailto:studiomofo@mozillafoundation.org">studiomofo@mozillafoundation.org</a></p>
           </div>
