--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -24,7 +24,7 @@
       <main>
         <div class="row">
           <div class="col-md-4 col-md-offset-4 text-center">
-            <p id="thank-you-message">Thanks for submitting your request, {{theName}}!</p>
+            <p id="thank-you-message">Thanks, {{theName}}! <br /> And We love you too!</p>
           </div>
         </div>
       </main>
