--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
         </div>
         <div id="form-section" class="row">
           <div class="col-md-4 col-md-offset-4 text-center">
-            <p>Tell us what you need</p>
+            <p>Tell us what you need.</p>
             <form id="request-form" action="/requestForm" method="post" role="form">
               <label for="requester-name" class="hidden">Your Name</label>
               <input id="requester-name" class="form-control" type="text" maxlength="50" size="100" name="name" placeholder="What's your name?" required></input>
