--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -24,7 +24,11 @@
       <main>
         <div class="row">
           <div class="col-md-4 col-md-offset-4 text-center">
-            <p id="thank-you-message">Thanks, {{theName}}! <br /> And We love you too!</p>
+            <p id="thank-you-message">
+              Thanks, {{theName}}! <br />
+              We love you too! <br />
+              We'll be in touch soon to discuss your project.
+            </p>
           </div>
         </div>
       </main>
