--- a/views/index.html
+++ b/views/index.html
@@ -71,8 +71,35 @@
       </main>
       <footer>
         <script src="//mozorg.cdn.mozilla.net/tabzilla/tabzilla.js"></script>
-        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="/js/jquery-1.11.0.min.js"></script>
         <script src="/bootstrap/js/bootstrap.min.js"></script>
+        <script>
+          $.ajax({
+            url: "https://api-dev.bugzilla.mozilla.org/1.3/bug",
+            type: "GET",
+            dataType: 'json',
+            data: {
+              product: "Mozilla Foundation Communications",
+              bug_status: "NEW"
+            },
+            contentType: "application/json",
+            error: function(jqXHR, textStatus){
+              console.log("eeerrrorrrr");
+              console.log(textStatus);
+            },
+            success: function(data){
+              console.log("success");
+              console.log(data);
+              var bugs = data.bugs;
+              for ( var i=0; i<bugs.length; i++){
+                var bug = bugs[i];
+                console.log(bug.id);
+                console.log(bug.ref);
+                console.log(bug.summary);
+              }
+            }
+          });
+        </script>
       </footer>
     </div>
   </body>
