--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
       <main>
         <div class="row">
           <div class="col-md-4 col-md-offset-4 text-center">
-            <p>We help plan and produce websites, apps, graphics and copy for the Mozilla Foundation.</p>
+            <p>We help plan communications, websites, graphics, and other engagement projects for the Mozilla Foundation.</p>
           </div>
         </div>
         <div id="form-section" class="row">
@@ -36,7 +36,7 @@
               <label for="requester-team" class="hidden">Which team are you on?</label>
               <input id="requester-team" class="form-control" type="text" maxlength="50" size="100" name="team" placeholder="What team are you on?" required></input>
               <label for="request-deadline" class="hidden">Deadline</label>
-              <input id="request-deadline" class="form-control" type="text" name="deadline" placeholder="Deadline" required></input>
+              <input id="request-deadline" class="form-control" type="text" name="deadline" placeholder="Deadline: Date & Reason" required></input>
               <label for="request-summary" class="hidden">Summary</label>
               <textarea id="request-summary" class="form-control" name="summary" cols="100" rows="5" maxlength="140" placeholder="Briefly describe how we can help you (140 characters or less)" required></textarea>
               <input type="submit" value="Submit" class="btn btn-default"></input>
