--- a/views/index.html
+++ b/views/index.html
@@ -1,106 +1,53 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Studio MoFo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//mozorg.cdn.mozilla.net/media/css/tabzilla-min.css" rel="stylesheet" />
-    <link rel='stylesheet' href='/stylesheets/fonts.css' />
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/style.css">
-  </head>
-  <body>
-    <div class="container">
-      <a href="https://www.mozilla.org/" id="tabzilla">mozilla</a>
-      <div class="row">
-        <header id="logo-banner" class="text-center col-md-4 col-md-offset-4">
-          <div class="circle"></div>
-          <div id="logo-text">
-            <h1>Help a <br/> Mofo Out</h1>
-            <p>DRAFT &#8226; DESIGN &#8226; DEVELOP</p>
-          </div>
-        </header>
-      </div>
+{% extends "views/layout.html" %}
 
-      <main>
-        <div class="row">
-          <div class="col-md-4 col-md-offset-4 text-center">
-            <p>We help plan communications, websites, graphics, and other engagement projects for the Mozilla Foundation.</p>
-          </div>
-        </div>
-        <div id="form-section" class="row">
-          <div class="col-md-4 col-md-offset-4 text-center">
-            <p>Tell us what you need.</p>
-            <form id="request-form" action="/requestForm" method="post" role="form">
-              <label for="requester-name" class="hidden">Your Name</label>
-              <input id="requester-name" class="form-control" type="text" maxlength="50" size="100" name="name" placeholder="What's your name?" required></input>
-              <label for="requester-team" class="hidden">Which team are you on?</label>
-              <input id="requester-team" class="form-control" type="text" maxlength="50" size="100" name="team" placeholder="What team are you on?" required></input>
-              <label for="request-deadline" class="hidden">Deadline</label>
-              <input id="request-deadline" class="form-control" type="text" name="deadline" placeholder="Deadline: Date & Reason" required></input>
-              <label for="request-summary" class="hidden">Summary</label>
-              <textarea id="request-summary" class="form-control" name="summary" cols="100" rows="5" maxlength="140" placeholder="Briefly describe how we can help you (140 characters or less)" required></textarea>
-              <input type="submit" value="Submit" class="btn btn-default"></input>
-            </form>
-            <p>Questions? Email us anytime at <a href="mailto:studiomofo@mozillafoundation.org">studiomofo@mozillafoundation.org</a></p>
-          </div>
-        </div>
-        <div id="who-are-we">
-          <div class="row">
-            <div class="col-md-4 col-md-offset-4 text-center">
-              <p><b>WHO IS STUDIO MOFO</b></p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4 text-center">
-              <div class="avatar"><img src="/images/erika.jpg"></div>
-              <p class="name">Erika Drushka</p>
-              <p class="title">Copywriter</p>
-            </div>
-            <div class="col-md-4 text-center">
-              <div class="avatar"><img src="/images/sabrina.jpg"></div>
-              <p class="name">Sabrina Ng</p>
-              <p class="title">Designer</p>
-            </div>
-            <div class="col-md-4 text-center">
-              <div class="avatar"><img src="/images/mavis.jpg"></div>
-              <p class="name">Mavis Ou</p>
-              <p class="title">Developer</p>
-            </div>
-          </div>
-        </div>
-      </main>
-      <footer>
-        <script src="//mozorg.cdn.mozilla.net/tabzilla/tabzilla.js"></script>
-        <script src="/js/jquery-1.11.0.min.js"></script>
-        <script src="/bootstrap/js/bootstrap.min.js"></script>
-        <script>
-          // $.ajax({
-          //   url: "https://api-dev.bugzilla.mozilla.org/1.3/bug",
-          //   type: "GET",
-          //   dataType: 'json',
-          //   data: {
-          //     product: "Mozilla Foundation Communications",
-          //     bug_status: "NEW"
-          //   },
-          //   contentType: "application/json",
-          //   error: function(jqXHR, textStatus){
-          //     console.log("eeerrrorrrr");
-          //     console.log(textStatus);
-          //   },
-          //   success: function(data){
-          //     console.log("success");
-          //     console.log(data);
-          //     var bugs = data.bugs;
-          //     for ( var i=0; i<bugs.length; i++){
-          //       var bug = bugs[i];
-          //       console.log(bug.id);
-          //       console.log(bug.ref);
-          //       console.log(bug.summary);
-          //     }
-          //   }
-          // });
-        </script>
-      </footer>
+{% block bodyOpen %}<body class="home">{% endblock %}
+{% block mainContent %}
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4 text-center">
+        <p>We help plan communications, websites, graphics, and other engagement projects for the Mozilla Foundation.</p>
+      </div>
     </div>
-  </body>
-</html>
+    <div id="form-section" class="row">
+      <div class="col-md-4 col-md-offset-4 text-center">
+        <p>Tell us what you need.</p>
+        <form id="request-form" action="/requestForm" method="post" role="form">
+          <label for="requester-name" class="hidden">Your Name</label>
+          <input id="requester-name" class="form-control" type="text" maxlength="50" size="100" name="name" placeholder="What's your name?" required></input>
+          <label for="requester-team" class="hidden">Which team are you on?</label>
+          <input id="requester-team" class="form-control" type="text" maxlength="50" size="100" name="team" placeholder="What team are you on?" required></input>
+          <label for="request-deadline" class="hidden">Deadline</label>
+          <input id="request-deadline" class="form-control" type="text" name="deadline" placeholder="Deadline: Date & Reason" required></input>
+          <label for="request-summary" class="hidden">Summary</label>
+          <textarea id="request-summary" class="form-control" name="summary" cols="100" rows="5" maxlength="140" placeholder="Briefly describe how we can help you (140 characters or less)" required></textarea>
+          <input type="submit" value="Submit" class="btn btn-default"></input>
+        </form>
+        <p>Questions? Email us anytime at <a href="mailto:studiomofo@mozillafoundation.org">studiomofo@mozillafoundation.org</a></p>
+      </div>
+    </div>
+    <div id="who-are-we">
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4 text-center">
+          <p><b>WHO IS STUDIO MOFO</b></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <div class="avatar"><img src="/img/erika.jpg"></div>
+          <p class="name">Erika Drushka</p>
+          <p class="title">Copywriter</p>
+        </div>
+        <div class="col-md-4 text-center">
+          <div class="avatar"><img src="/img/sabrina.jpg"></div>
+          <p class="name">Sabrina Ng</p>
+          <p class="title">Designer</p>
+        </div>
+        <div class="col-md-4 text-center">
+          <div class="avatar"><img src="/img/mavis.jpg"></div>
+          <p class="name">Mavis Ou</p>
+          <p class="title">Developer</p>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
