Code cleanup & Add postintall command to package.json

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1,3 +1,4 @@
+@import "../bower_components/bootstrap/less/bootstrap";
 // Font Awesome ---------------------------------------------------------------
 // Use http://fortawesome.github.io/Font-Awesome/cheatsheet/ as a guide
 @import "../bower_components/font-awesome/less/font-awesome";
