Add Calendar Viz (draft)

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1,10 +1,15 @@
 @import "../bower_components/bootstrap/less/bootstrap";
+
 // Font Awesome ---------------------------------------------------------------
 // Use http://fortawesome.github.io/Font-Awesome/cheatsheet/ as a guide
 @import "../bower_components/font-awesome/less/font-awesome";
 @fa-font-path: "/bower_components/font-awesome/fonts";
 
+// Other Fonts
 @import "font";
+
+// Calendar Viz stylesheet
+@import "calendar-viz";
 
 
 body{
@@ -88,4 +93,3 @@ body{
   font-size: 20px;
   margin-top: 50px;
 }
-
