--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,9 @@
         <p>We help plan communications, websites, graphics, and other engagement projects for the Mozilla Foundation.</p>
       </div>
     </div>
+  </div>
+
+  <div class="container">
     <div id="form-section" class="row">
       <div class="col-md-4 col-md-offset-4 text-center">
         <p>Tell us what you need.</p>
@@ -25,6 +28,9 @@
         <p>Questions? Email us anytime at <a href="mailto:studiomofo@mozillafoundation.org">studiomofo@mozillafoundation.org</a></p>
       </div>
     </div>
+  </div>
+
+  <div class="container">
     <div id="who-are-we">
       <div class="row">
         <div class="col-md-4 col-md-offset-4 text-center">
@@ -50,4 +56,34 @@
       </div>
     </div>
   </div>
+
+  <div id="viz-section">
+    <div class="row">
+      <div id="left-container">
+        <div id="description-box">
+          <header id="event-title"></header>
+          <ul id="event-details">
+          </ul>
+        </div>
+      </div>
+      <div id="right-container">
+        <div id="viz-container">
+          <table id="calendar-viz-tier">
+            <thead>
+              <tr><th></th></tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+          <table id="calendar-viz">
+            <thead>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
 {% endblock %}
