--- a/views/index.html
+++ b/views/index.html
@@ -90,6 +90,31 @@
     </div>
   </div>
 
+  <div class="big-section" id="bug-list">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <h5 class="text-center">What We Are Working On</h5>
+          <table>
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>SUMMARY</th>
+              </tr>
+            </thead>
+            <tbody>
+            </thead>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="big-section-divider">
+    </div>
+  </div>
+
   <div id="who-are-we" class="big-section">
     <div class="container">
       <div class="row">
