--- a/views/layout.html
+++ b/views/layout.html
@@ -36,5 +36,6 @@
   <script src="http://mozorg.cdn.mozilla.net/tabzilla/tabzilla.js"></script>
 
   <script src="js/ui.js"></script>
+  <script src="js/viz.js"></script>
 </body>
 </html>
