--- a/public/less/style.less
+++ b/public/less/style.less
@@ -14,10 +14,51 @@
 
 @body-blue: #E8F3F8;
 
+@dark-blue: #67C1C0;
+@light-blue: #83E2E1;
+@dark-red: #EC515B;
+@light-red: #F4969C;
+
+
 body{
   background: @body-blue;
   color: #222;
   font-family: "Open Sans Light";
+}
+
+nav#studiomofo-nav {
+  padding: 20px;
+  font-size: 20px;
+  color: #888;
+  background: #FFF;
+  #logo {
+    float: left;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-top: 5px;
+    i {
+      margin-right: 5px;
+      color: @dark-red;
+    }
+    a {
+      font-size: 25px;
+      color: inherit;
+    }
+    a::after {
+      content: ".";
+      color: @dark-red;
+    }
+    a:hover {
+      color: inherit;
+      text-decoration: none;
+    }
+  }
+  #studiomofo-nav-list {
+    float: right;
+  }
+  #studiomofo-nav-list.in {
+    clear: none;
+  }
 }
 
 .row{
